[package]
name = "keycard-nip46-proxy"
version = "0.1.0"
edition = "2021"
description = "NIP-46 Nostr remote signer proxy backed by Keycard hardware"
license = "MIT OR Apache-2.0"

[[bin]]
name = "keycard-nip46-proxy"
path = "src/main.rs"

[features]
hardware = ["pcsc"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
sha2 = "0.10"
secp256k1 = { version = "0.28", features = ["rand", "global-context"] }
aes = "0.8"
cbc = "0.1"
base64 = "0.21"
pcsc = { version = "2", optional = true }
hmac = "0.12.1"
p256 = { version = "0.13.2", features = ["ecdh"] }
rand = "0.8"
